<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFavoris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BackgroundSplash">

            <ImageView
                android:id="@+id/favoris_image"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/favoris_titre"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/titreAnnonce"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <TextView
                    android:id="@+id/favoris_description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/remplissage"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="10dp"
                    android:maxLines="4"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/favoris_price"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/prixText"
                    android:textColor="@color/yellow"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>