<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardViewAnnonceVendue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BackgroundSplash">

            <ImageView
                android:id="@+id/AnnonceVendueImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/AnnonceVendueTitre"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/titreAnnonce"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/AnnonceVendueDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:maxLines="4"
                    android:text="@string/remplissage"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/AnnonceVendueTrash"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_white_rounded_dark"
                        android:src="@drawable/trash"/>

                    <TextView
                        android:id="@+id/AnnonceVenduePrix"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="1"
                        android:text="@string/prixText"
                        android:textAlignment="textEnd"
                        android:textColor="@color/yellow"
                        android:textSize="25sp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</layout>
