<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_annonce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/BackgroundAnnonce">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/annonceImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/chemise"
                android:layout_weight="3"
                android:contentDescription="image de l'Annonce" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/BackgroungTitre"
                android:paddingHorizontal="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/annonceDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallTitre"
                    android:layout_marginVertical="2dp"
                    android:textColor="@color/white"
                    android:text="@string/date"/>

                <TextView
                    android:id="@+id/annonceTitre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/titreAnnonce"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/annoncePrix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/prixText"
                        android:layout_marginTop="5dp"
                        android:textColor="#EB57A1"
                        android:layout_weight="1"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/annonceLiked"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_favoris"
                        android:layout_weight="0"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
